Use unconstrained sizes in bubble dialog frames

Calling CalculatePreferredSize() can be expensive. The default
BubbleFrameView implmementations of GetMinimumSize() and
GetMaximumSize() invoke it, but popups are not user-sizable, so
there is no point calculating anything other than the
preferred size. Popups also commonly change their preferred size
without calling Widget::OnSizeConstraintsChanged() so the min/max
sizes set will be wrong anyway.

Bug: 788597
Change-Id: I7473177eb3f0c9906c7a3191c776d2f36080cb26